Bug 98418 - table control looses all its columns
Summary: table control looses all its columns
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: framework (show other bugs)
Version:
(earliest affected)
5.2.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.2.0
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-03-04 15:07 UTC by Lionel Elie Mamane
Modified: 2016-10-25 19:09 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
reproduction case (9.69 KB, application/vnd.oasis.opendocument.text)
2016-03-04 15:07 UTC, Lionel Elie Mamane
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lionel Elie Mamane 2016-03-04 15:07:17 UTC
Created attachment 123234 [details]
reproduction case

This bug is common to Writer, Base and Calc.

Open a document containing a table control, e.g. the attached Writer document. The table has no columns. stderr contains stuff like:



warn:legacy.osl:460:1:xmloff/source/forms/elementimport.cxx:1853: OColumnWrapperImport::StartElement: AttributeList not cloneable!
warn:legacy.osl:460:1:xmloff/source/forms/elementimport.cxx:1856: OColumnWrapperImport::StartElement: no cloned list!
warn:legacy.osl:460:1:xmloff/source/forms/elementimport.cxx:1842: OColumnWrapperImport::CreateChildContext: had no form:column element!
warn:legacy.osl:460:1:forms/source/component/Grid.cxx:339: OGridControlModel::createColumn: Unknown Column
warn:legacy.osl:460:1:xmloff/source/forms/elementimport_impl.hxx:104: OColumnImport::createElement: the factory returned an invalid object!
warn:legacy.osl:460:1:xmloff/source/forms/elementimport.cxx:964: OControlImport::EndElement: invalid control!
Comment 1 raal 2016-03-04 19:59:11 UTC
I can confirm with Version: 5.2.0.0.alpha0+
Build ID: 817f6bd75e98a321c238b5906bfcb031908914b2
CPU Threads: 1; OS Version: Windows 6.19; UI Render: default; 
TinderBox: Win-x86@39, Branch:master, Time: 2016-03-01_01:14:57
Comment 2 Caolán McNamara 2016-03-10 14:38:03 UTC
According to miklos's daily bibisect repo this went wrong in the 5e971b274922f9713aefcd5f612459ffced84845..d385fd6c96b3401df07b66743ce68a2f47b0d13f range
Comment 3 Caolán McNamara 2016-03-11 09:22:57 UTC
This started happening at 

commit 8998768a34751d35403678a81464a26835b2230e
Author: Matúš Kukan <matus.kukan@gmail.com>
Date:   Sat Feb 6 18:38:32 2016 +0100

for some reason
Comment 4 Commit Notification 2016-03-11 09:48:26 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=66fee51115a2174bde47c3af01a7d1fdcf1ef602

Resolves: tdf#98418 AttributeList must support XCloneable

It will be available in 5.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.