Resolves: tdf#98418 AttributeList must support XCloneable

regression from

commit 8998768a34751d35403678a81464a26835b2230e
Date:   Sat Feb 6 18:38:32 2016 +0100

Change-Id: I217fb66621505b77b6102954c07ef513e2d4b25e