include/comphelper/attributelist.hxx
@@ -20,6 +20,7 @@
 #ifndef INCLUDED_COMPHELPER_ATTRIBUTELIST_HXX
 #define INCLUDED_COMPHELPER_ATTRIBUTELIST_HXX
 
+#include <com/sun/star/util/XCloneable.hpp>
 #include <com/sun/star/xml/sax/XAttributeList.hpp>
 #include <cppuhelper/implbase.hxx>
 #include <comphelper/comphelperdllapi.h>
@@ -31,11 +32,13 @@ namespace comphelper
 struct AttributeList_Impl;
 
 class COMPHELPER_DLLPUBLIC AttributeList :
-    public ::cppu::WeakImplHelper<css::xml::sax::XAttributeList>
+    public ::cppu::WeakImplHelper<css::xml::sax::XAttributeList, css::util::XCloneable>
 {
-    AttributeList_Impl *m_pImpl;
+    std::unique_ptr<AttributeList_Impl> m_pImpl;
 public:
     AttributeList();
+    AttributeList(const AttributeList &r);
+
     virtual ~AttributeList();
 
     // methods that are not contained in any interface
@@ -56,6 +59,9 @@ public:
     virtual OUString SAL_CALL getValueByName(const OUString& aName)
         throw( css::uno::RuntimeException, std::exception ) override;
 
+    // css::util::XCloneable
+    virtual css::uno::Reference< XCloneable > SAL_CALL
+        createClone()   throw(css::uno::RuntimeException, std::exception) override;
 };
 
 } // namespace comphelper
